Added a simple API code with clean code architecture

--- a/src/SkyLeave.API/SkyLeave.API.csproj
+++ b/src/SkyLeave.API/SkyLeave.API.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SkyLeave.Application\SkyLeave.Application.csproj" />
+    <ProjectReference Include="..\SkyLeave.Infrastructure\SkyLeave.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
