--- a/src/SkyLeave.Infrastructure/SkyLeave.Infrastructure.csproj
+++ b/src/SkyLeave.Infrastructure/SkyLeave.Infrastructure.csproj
@@ -1,6 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SkyLeave.Application\SkyLeave.Application.csproj" />
     <ProjectReference Include="..\SkyLeave.Domain\SkyLeave.Domain.csproj" />
   </ItemGroup>
