--- a/src/SkyLeave.API/appsettings.json
+++ b/src/SkyLeave.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "SkyLeaveDbConnection": "Server=AHMED\\SQLEXPRESS;Database=SkyLeaveDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
