added a swagger aauthorizarion to API

--- a/src/SkyLeave.API/appsettings.json
+++ b/src/SkyLeave.API/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "SkyLeaveDbConnection": "Server=AHMED\\SQLEXPRESS;Database=SkyLeaveDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
+  "Jwt": {
+    "Key": "your_super_secret_key_1234567890",
+    "Issuer": "SkyleaveIssuer",
+    "Audience": "SkyleaveAudience"
+  },
   "AllowedHosts": "*"
 }
