--- a/src/SkyLeave.API/appsettings.json
+++ b/src/SkyLeave.API/appsettings.json
@@ -1,10 +1,4 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "ConnectionStrings": {
     "SkyLeaveDbConnection": "Server=AHMED\\SQLEXPRESS;Database=SkyLeaveDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
@@ -12,6 +6,13 @@
     "Key": "your_super_secret_key_1234567890",
     "Issuer": "SkyleaveIssuer",
     "Audience": "SkyleaveAudience"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
   },
   "AllowedHosts": "*"
 }
