uddated port in json

--- a/src/SkyLeave.API/SkyLeave.API.csproj
+++ b/src/SkyLeave.API/SkyLeave.API.csproj
@@ -21,5 +21,9 @@
     <ProjectReference Include="..\SkyLeave.Application\SkyLeave.Application.csproj" />
     <ProjectReference Include="..\SkyLeave.Infrastructure\SkyLeave.Infrastructure.csproj" />
   </ItemGroup>
-
+	<ItemGroup>
+		<None Update="appsettings.json">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 </Project>
