--- a/src/SkyLeave.API/appsettings.json
+++ b/src/SkyLeave.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SkyLeaveDbConnection": "Server=AHMED\\SQLEXPRESS;Database=SkyLeaveDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "SkyLeaveDbConnection": "Server=AHMED\\SQLEXPRESS;Database=SkyLeaveDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
   },
   "Jwt": {
     "Key": "your_super_secret_key_1234567890",
@@ -12,6 +12,16 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5000"
+      },
+      "Https": {
+        "Url": "https://localhost:5001"       
+      }
     }
   },
   "AllowedHosts": "*"
